# project-standards

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .pre-commit-hooks.yaml  .prettierignore  .prettierrc.json  .project-standards.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  NOTES.md  README.md  STATUS.md  TODO.md  UPGRADING.md  package-lock.json  package.json  project-standards.code-workspace  pyproject.toml
.codex/: config.toml
.github/: dependabot.yml
.github/workflows/: check.yml  coherence.yml  format.yml  lint-markdown.yml  tests.yml  validate-markdown-frontmatter.yml  validate-specs.yml  validate-standards-graph.yml  validate-standards.yml
.standards/: catalog.toml  config.toml  lock.toml
catalogs/: 5.toml
docs/: STATUS.md  TODO.md  adoption-prompt.md  fable-findings.md  mcp-readiness.md  python-backend.md  usage.md  working-adoption-prompt.md
docs/adr/: README.md  adr-0001-standard-bundle-authoring-contract.md  adr-0002-manifest-first-standard-discovery.md  adr-0003-separate-standard-and-artifact-manifests.md  adr-0004-authority-map-and-conflict-free-composition.md  adr-0005-stable-generic-agent-tooling-interface.md  adr-0006-standard-provider-plugin-model.md  adr-0007-standard-graph-validation-gate.md  adr-0008-consumer-config-namespace-registry.md  adr-0009-agent-summary-and-canonical-standard-split.md  adr-0010-standard-resource-uris-and-index.md  adr-0011-dogfood-consumer-fixtures-for-standards-composition.md  adr-0012-mcp-readiness-before-server-implementation.md  adr-0013-independent-standard-packages-and-relationship-taxonomy.md  adr-0014-markdown-frontmatter-field-value-policy.md  adr-0015-exclude-standards-from-local-frontmatter-scope.md  adr-0016-package-markdown-frontmatter-skill-with-standard.md  adr-0017-unified-standard-adoption-methodology.md  adr-0018-standard-package-lifecycle-methodology.md  adr-0019-packaged-artifact-parity-and-provenance.md  adr-0020-standard-package-versioning-methodology.md  adr-0021-standard-packaged-skill-installation-methodology.md  adr-0022-standard-packaged-hook-installation-methodology.md  adr-0023-unified-consumer-standards-control-plane.md  adr-0024-catalog-scoped-package-version-channels.md
docs/codex-reviews/: 2026-06-08-105831-codex-spec-review-round1.md  2026-06-08-110917-codex-spec-review-round2.md  2026-06-08-111900-codex-spec-review-round3.md  2026-06-08-112648-codex-spec-review-round4.md  2026-06-08-113450-codex-spec-review-round5.md  2026-06-08-114441-codex-spec-review-round6.md  2026-06-08-123545-codex-plan-review-round1.md  2026-06-08-124651-codex-plan-review-round2.md  2026-06-08-125521-codex-plan-review-round3.md  2026-06-08-130406-codex-plan-review-round4.md  2026-06-08-145015-codex-plan-review-round5.md  2026-06-08-164819-codex-spec-review-round1.md  2026-06-08-165903-codex-spec-review-round2.md  2026-06-08-170824-codex-spec-review-round3.md  2026-06-08-172734-codex-plan-review-round1.md  2026-06-08-175123-codex-plan-review-round2.md  2026-06-08-180143-codex-plan-review-round3.md  2026-06-08-220157-codex-spec-review-round1.md  2026-06-08-222041-codex-spec-review-round2.md  2026-06-08-222702-codex-spec-review-round3.md  2026-06-08-224520-codex-plan-review-round1.md  2026-06-08-230021-codex-plan-review-round2.md  2026-06-08-231542-codex-plan-review-round3.md  2026-06-08-232507-codex-plan-review-round4.md  2026-06-09-081346-codex-code-review-round1.md  2026-06-09-083303-codex-code-review-round2.md  2026-07-04-211354-codex-spec-review-round1.md  2026-07-04-212520-codex-spec-review-round2.md  2026-07-04-213939-codex-plan-review-round1.md  2026-07-04-220149-codex-plan-review-round2.md  2026-07-04-221108-codex-plan-review-round3.md  2026-07-04-230045-codex-spec-review-round1.md  2026-07-04-230831-codex-spec-review-round2.md  2026-07-04-232429-codex-plan-review-round1.md  2026-07-04-233813-codex-plan-review-round2.md  2026-07-04-234354-codex-plan-review-round3.md  2026-07-05-040036-codex-spec-review-round1.md  (+34 more)
examples/: adr.example.md  concept.example.md  note.example.md  runbook.example.md
meta/: versioning.md
schemas/: markdown-frontmatter.schema.json
scripts/: README.md  build-validate-id-pyz.sh  check.py  plan.py  run_repository_tests.py  validate_id.py
standards/: README.md  adoption.md  adr.md  catalog.md  markdown-frontmatter.md  python-tooling-ssot-standard.md  versioning.md
templates/: adr-bare-minimal.md  adr-bare.md  adr-minimal.md  adr.md  concept.md  frontmatter-minimal.yml  frontmatter-standard.yml  note.md  research.md  runbook.md  spec.md
tests/: README.md  standards_graph_helpers.py  test_action_runtime_versions.py  test_adopt_cli.py  test_adopt_dogfood.py  test_adopt_engine.py  test_adopt_manifest.py  test_adopt_markdown_format.py  test_adopt_packaging.py  test_adopt_safety.py  test_bug_index_regeneration.py  test_cli_fix.py  test_filesystem.py  test_format_frontmatter.py  test_format_workflow.py  test_frontmatter_authoring.py  test_frontmatter_prettier_parity.py  test_frontmatter_unified_config.py  test_id_format.py  test_installed_wrappers.py  test_jsonc.py  test_lint_markdown_workflow.py  test_markdown_frontmatter_skill.py  test_markdownlint_config.py  test_no_stale_prettier_claims.py  test_precommit_hooks.py  test_provider_runner.py  test_registry_cli_documentation.py  test_registry_markdown_tooling.py  test_repository_test_gate.py  test_spec_cli.py  test_spec_config.py  test_spec_document.py  test_spec_extract.py  test_spec_lint.py  test_spec_new.py  test_spec_new_cli.py  test_spec_new_discovery.py  test_spec_next.py  test_spec_packaging.py  (+29 more)
tools/: validate_frontmatter.py
working/: HANDOFF.md  README.md  python-backend.md
(+1845 files in other folders)
